[package]
name = "italo-api"
version = "0.0.2"
edition = "2021"
authors = ["Flavio Bizzarri <fl.bizzarri@gmail.com>"]
license = "Apache-2.0"
description = "Rust binding for Italo API"
readme = "README.md"
homepage = "https://github.com/newfla/italo-api"
repository = "https://github.com/newfla/italo-api"
keywords = ["italo", "treno", "italia"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
anyhow = "1.0.75"
derive-new = "0.6.0"
getset = "0.1.2"
chrono = "0.4.31"
